Update slides.md with Bazelisk and Buildifier setup
Added installation instructions for Bazelisk and Buildifier.